--- a/css/css_index.css
+++ b/css/css_index.css
@@ -56,3 +56,21 @@ body {
 .input::before{
     content: "visiteur@tristan-tourbier.com:~$ ";
 }
+
+.curseur::after {
+    content: "|";
+    animation: blink 1s infinite;
+  }
+  
+  @keyframes blink {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
